# OthelloAI

./: .gitignore  CMakeLists.txt
Core/: Config.cpp  Config.h  Logger.cpp  Logger.h  Main.cpp  Makefile  Utils.cpp  Utils.h
Core/Agent/: Agent.cpp  Agent.h
Core/IO/: Directive.h
Core/IO/Input/: InputHandler.cpp  InputHandler.h
Core/IO/Output/: OutputHandler.cpp  OutputHandler.h
Core/OthelloGame/: BitBoard.cpp  BitBoard.h  Color.h  Direction.h  GameState.cpp  GameState.h  Move.cpp  Move.h  OthelloColor.h  OthelloGameBoard.cpp  OthelloGameBoard.h
